# source-3cx-pbx-v20

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  metadata.yaml  pyproject.toml  release-please-config.json  renovate.json
.github/workflows/: image.yml  release-please.yml
source_3cx_pbx_v20/: __init__.py  __main__.py  client.py  source.py  spec.yaml  streams.py
source_3cx_pbx_v20/schemas/: agents_in_queue_statistics.json  call_log_data.json  queue_performance_overview.json  queues.json
source_3cx_xapi/: __init__.py  __main__.py  source.py  spec.yaml  streams.py
source_3cx_xapi/schemas/: agents_in_queue_statistics.json  call_log_data.json  queue_performance_overview.json  users.json
tests/: test_client.py  test_helpers.py  test_streams.py
