[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "source-3cx-pbx-v20"
version = "0.5.5"
description = "Airbyte source connector for the 3CX PBX XAPI"
requires-python = ">=3.10"
dependencies = [
    "airbyte-cdk>=3.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
]

[project.scripts]
source-3cx-pbx-v20 = "source_3cx_pbx_v20.__main__:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["source_3cx_pbx_v20*"]

[tool.setuptools.package-data]
"source_3cx_pbx_v20" = ["spec.yaml", "schemas/*.json"]
